--- a/styles/home.css
+++ b/styles/home.css
@@ -22,15 +22,16 @@ font-family: "Roboto Condensed", sans-serif;
     margin: 0;
     box-sizing: border-box;
     font-family: "Roboto Condensed", sans-serif;
-    border: .1rem solid red;
+    /*border: .1rem solid red;*/
 }
 
 :root {
     --lead: #212121;
     --gold-finger: #F2BD12;
+    --gold-finger-claro: #f5dd9d;
     --eye-ball: #FFFdF7;
     --hint-yellow: #f8f6f0;
-    --amarelo-claro:#f7e5ac;
+    --amarelo-claro: #f5efdf;
     --pure-white: #FFF;
     --cinza: rgb(187, 184, 184);
     --cinza-escuro: #797979;
@@ -45,6 +46,7 @@ a {
     font-size: 1.1rem;
     text-decoration: none;
     color: var(--lead);
+    font-family: "Roboto Condensed", sans-serif;
 
 }
 
@@ -77,6 +79,14 @@ a {
     gap: 3rem;
 }
 
+.gap-4 {
+    gap: 4rem;
+}
+
+.gap-5 {
+    gap: 10rem;
+}
+
 .wrapper {
     max-width: 1800px;
     margin: auto;
@@ -93,6 +103,7 @@ img {
 .p-top {
     padding-top: 9rem;
 }
+
 .p-top-min {
     padding-top: 3rem;
 }
@@ -107,21 +118,34 @@ img {
     margin-top: 4rem;
 }
 
+.mt-half {
+    margin-top: 2rem;
+}
+
+.mt-auto {
+    margin-top: auto;
+}
+
+.mt-one-half {
+    margin-top: 1.5rem;
+}
+
 
 
 /*-------------------    Estilo do cabeçalho    -------------------------------*/
-/*
+
 header {
     max-width: 100%;
-    height: 90vh;  
-    background-color: #F2F2F2;
-    padding: 20px;
+    background-color: #f7e7be;
     text-align: center;
+}
     
-}*/
+
 .navbar {
     min-height: 14vh;
 }
+
+
 
 .logo {
     font-size: 3rem;
@@ -129,12 +153,29 @@ header {
     color: var(--gold-finger);
     font-family: "Lavishly Yours", cursive;
     font-weight: 800;
+    text-shadow:
+      -0.5px -0.5px 0 black,
+       0.5px -0.5px 0 black,
+      -0.5px  0.5px 0 black,
+       0.5px  0.5px 0 black;
 
 }
 
 
 /*botão de cadastrar*/
 .btn {
+    display: inline-block;
+    padding: .9rem 2rem;
+    background: var(--gold-finger);
+    border-radius: 1rem;
+    font-size: 1.1rem;
+    color: var(--pure-white);
+    box-shadow: rgba(0, 0, 0, 0.1) 0 2px 1px;
+    transition: .3s ease-in-out;
+
+}
+
+.btn-pizzaria {
     display: inline-block;
     padding: .9rem 2rem;
     background: var(--gold-finger);
@@ -174,6 +215,8 @@ header {
     align-items: center;
     padding: 50px;
     position: relative;
+    border-radius: 20px;
+    overflow: hidden;
 
 }
 
@@ -186,7 +229,7 @@ header {
 
 h1 {
     /* texto promocional Maior */
-    font-size: 4vw;
+    font-size: clamp(1.5rem, 4vw, 3.5rem);
     color: var(--eye-ball);
     /*cor da home page */
 }
@@ -205,18 +248,38 @@ p {
     font-weight: 450;
 
 }
-p1{
+
+p1 {
     /* texto promocional pequeno varição*/
     font-family: "Roboto Condensed", sans-serif;
     font-size: 1.25rem;
     color: var(--cinza-escuro);
     line-height: 1.8rem;
     font-weight: 450;
+
 }
 
 .para {
     margin-block: 2rem;
     max-width: 550px;
+}
+
+.social-icon {
+    background: var(--hint-yellow);
+    width: 3rem;
+    aspect-ratio: 1;
+    border-radius: 1rem;
+    font-size: 1.2rem;
+    text-align: center;
+    line-height: 3rem;
+    box-shadow: rgba(0, 0, 0, 0.1) 0 2px 1px;
+    transition: .3s ease-in-out;
+}
+
+.social-icon:hover {
+    background: var(--lead);
+    color: var(--pure-white);
+
 }
 
 /*--------------     SEÇÃO 01    -------------------*/
@@ -263,8 +326,8 @@ h3 {
     border: .1rem solid var(--gold-finger);
     border-radius: 2rem;
     box-shadow:
-        rgba(0, 0, 0, 0.05) 8xp 8xp 8xp,
-        rgba(0, 0, 0, 0.05) 8xp 8xp 8xp inset;
+        rgba(0, 0, 0, 0.05) 8px 8px 8px,
+        rgba(0, 0, 0, 0.05) 8px 8px 8px inset;
 }
 
 .layout-card img {
@@ -311,12 +374,17 @@ h4 {
 */
 
 .slide-content {
-    display: flex;            /* coloca lado a lado */
-    align-items: center;      /* alinha verticalmente */
+    display: flex;
+    /* coloca lado a lado */
+    align-items: center;
+    /* alinha verticalmente */
     justify-content: flex-start;
-    gap: 1rem;                   /* reduz espaço entre imagem e texto */
-    width: 80%;                   /* ocupa largura total */
-    padding: 0 4rem;               /* margem interna para afastar da seta */
+    gap: 1rem;
+    /* reduz espaço entre imagem e texto */
+    width: 80%;
+    /* ocupa largura total */
+    padding: 0 4rem;
+    /* margem interna para afastar da seta */
 }
 
 .slide-content img {
@@ -326,8 +394,10 @@ h4 {
 }
 
 .slide-content .info {
-    text-align: left;         /* alinhamento da descrição */
-    max-width: 350px;         /* controla largura do texto */
+    text-align: left;
+    /* alinhamento da descrição */
+    max-width: 350px;
+    /* controla largura do texto */
 }
 
 .slide-content .info h4 {
@@ -355,16 +425,21 @@ h4 {
 
 .swiper-button-next.seta,
 .swiper-button-prev.seta {
-    width: 4rem;              /* tamanho da bolinha */
-    height: 4rem;             /* garante altura */
-    border-radius: 50%;       /* círculo perfeito */
+    width: 4rem;
+    /* tamanho da bolinha */
+    height: 4rem;
+    /* garante altura */
+    border-radius: 50%;
+    /* círculo perfeito */
     background: var(--gold-finger);
     color: var(--lead);
     display: flex;
     align-items: center;
     justify-content: center;
-    font-size: 1.8rem;        /* tamanho da seta */
+    font-size: 1.8rem;
+    /* tamanho da seta */
 }
+
 /* Remove as setas padrão do Swiper */
 .swiper-button-next::after,
 .swiper-button-prev::after {
@@ -375,25 +450,83 @@ h4 {
 
 /*--------------     SEÇÃO 03    -------------------*/
 
-.sobre-conteiner{
+.sobre-conteiner {
     background: var(--amarelo-claro);
     padding: 3rem 6rem;
     border-radius: 3rem;
+    gap: 10rem;
+
 }
 
-.sobre-conteiner h2 {
-    font-size: 3rem;
+.sobre-conteiner .content h2 {
+    font-size: 4rem;
+    margin-bottom: 2rem;
 }
 
-.sobre-conteiner image {
-    width: 25rem;
+
+.sobre-conteiner .sobre-image img {
+    width: 40rem;
+
+
+
 }
+
 
 
 
 
 /*------------------   Estilo do Rodapé    --------------------------------------------*/
 
+.footer-conteiner {
+    margin-top: 13rem;
+    padding-block: 4rem;
+    gap: 3rem;
+    background: var(--gold-finger-claro);
+    height: 350px;
+    border-radius: 2rem 2rem 0 0;
+}
+
+.footer-conteiner .flex {
+    align-items: flex-start;
+}
+
+.footer-wrapper {
+    flex: 1;
+    flex-basis: 150px;
+}
+
+.footer-wrapper:nth-child(1) {
+    flex: 2;
+    flex-basis: 300px;
+}
+
+.footer-wrapper:first-child {
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+    /* alinha tudo à esquerda */
+    gap: 0.5rem;
+    /* espaçamento entre logo, texto e ícones */
+}
+
+.footer-wrapper .social-icon {
+    background: var(--pure-white);
+}
+
+.footer-wrapper .social-icon:hover {
+    background: var(--lead);
+    color: var(--pure-white);
+}
+
+.footer-link {
+    color: var(--cinza-escuro);
+    font-size: 1.1rem;
+    transition: .3 ease-in-out;
+}
+
+.footer-link:hover {
+    color: var(--lead);
+}
 
 
 
@@ -410,12 +543,13 @@ h4 {
     }
 
     .desktop-action .menu {
-
         display: block;
 
     }
 
+
     .mobile-menu {
+        z-index: 1;
         display: flex;
         flex-direction: column;
         justify-content: center;
@@ -431,15 +565,15 @@ h4 {
         border: .1rem solid var(--gold-finger);
         border-radius: 2rem;
         box-shadow:
-            rgba(0, 0, 0, 0.05) 8xp 8xp 8xp,
-            rgba(0, 0, 0, 0.05) 8xp 8xp 8xp inset;
+            rgba(0, 0, 0, 0.05) 8px 8px 8px,
+            rgba(0, 0, 0, 0.05) 8px 8px 8px inset;
         transition: all .5s ease-in-out;
     }
 
-    .mobile-menu-active {
+    .mobile-menu.mobile-menu-active {
+        display: flex;
         left: 50%;
         transform: translateX(-50%);
-
     }
 
     /* --------------    Estilo das seções   ---------------------------------------------*/
@@ -493,7 +627,53 @@ h4 {
         border: .1rem solid var(--gold-finger);
         border-radius: 2rem;
         box-shadow:
-            rgba(0, 0, 0, 0.05) 8xp 8xp 8xp,
-            rgba(0, 0, 0, 0.05) 8xp 8xp 8xp inset;
+            rgba(0, 0, 0, 0.05) 8px 8px 8px,
+            rgba(0, 0, 0, 0.05) 8px 8px 8px inset;
     }
+
+    .swiper-button-next.seta,
+    .swiper-button-prev.seta {
+        width: 4rem;
+        /* tamanho da bolinha */
+        height: 4rem;
+        /* garante altura */
+        border-radius: 50%;
+        /* círculo perfeito */
+        background: var(--gold-finger);
+        color: var(--lead);
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        font-size: 1rem;
+        /* tamanho da seta */
+        top: 78%;
+        /* posição da seta */
+    }
+
+    /*--------------     SEÇÃO 04    -------------------*/
+    .sobre-conteiner {
+        padding: 2.2rem;
+    }
+
+    .sobre-conteiner .content h2 {
+        font-size: 3.5rem;
+    }
+
+    /*--------------     Rodapé da Página   -------------------*/
+    .footer-conteiner {
+        margin-top: 13rem;
+        padding-block: 4rem;
+        gap: 3rem;
+        background: var(--gold-finger-claro);
+        height: 800px;
+        border-radius: 2rem 2rem 0 0;
+    }
+
+    .footer-conteiner .flex {
+        align-items: flex-start;
+    }
+
+
+
+
 }
