- Ajustado a responsividade dos Produtos na pagina principal. - Refeito o header, Removido o footer, Adicionaado barra lateral. - Iniciado a personalizaçao do Banner.

--- a/styles/home.css
+++ b/styles/home.css
@@ -136,13 +136,13 @@ img {
 
 header {
     max-width: 100%;
-    background-color: #f7e7be;
+   /* background-color: #f7e7be;*/
     text-align: center;
 }
     
 
 .navbar {
-    min-height: 14vh;
+    min-height: 12vh;
 }
 
 
